--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,34 +1,38 @@
 version: 0.2
 
-env:
-  variables:
-    ImageName: "product-app"
-    AWS_REGION: "eu-north-1"
-    ECR_REPO: "422374168930.dkr.ecr.eu-north-1.amazonaws.com"
-
 phases:
   pre_build:
     commands:
+      - mvn clean install
       - echo Logging in to Amazon ECR...
-      - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $ECR_REPO
-
+      - aws --version
+      - REPOSITORY_URI=422374168930.dkr.ecr.eu-north-1.amazonaws.com/demo-registry
+      - aws ecr get-login-password --region eu-north-1 | docker login --username AWS --password-stdin $REPOSITORY_URI
+      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
+      - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
   build:
     commands:
-      - echo Building JAR...
-      - mvn clean install
-      - echo Building Docker image...
-      - docker build -t $ImageName:latest .
-      - docker tag $ImageName:latest $ECR_REPO/$ImageName:latest
-
+      - echo Build started on `date`
+      - echo Building the Docker image...
+      - docker build -t $REPOSITORY_URI:latest .
+      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
   post_build:
     commands:
-      - echo Pushing Docker image to ECR...
-      - docker push $ECR_REPO/$ImageName:latest
-      - echo Build completed
+      - echo Build completed on `date`
+      - echo Pushing the Docker images...
+      - docker push $REPOSITORY_URI:latest
+      - docker push $REPOSITORY_URI:$IMAGE_TAG
+      - echo Writing image definitions file...
+      - printf '[{"name":"course-service","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
+      - echo Writing image definitions file...
+      # add your container name
+      - DOCKER_CONTAINER_NAME=demo-registry
+      - printf '[{"name":"%s","imageUri":"%s"}]' $DOCKER_CONTAINER_NAME $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
+      - echo $DOCKER_CONTAINER_NAME
+      - echo printing imagedefinitions.json
+      - cat imagedefinitions.json
 
 artifacts:
   files:
-    - target/*.jar
-    - scripts/*.sh
-    - appspec.yml
-  discard-paths: yes
+    - imagedefinitions.json
+    - target/Product-App-AWS-0.0.1-SNAPSHOT.jar
